Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3087

File layout change does not generate a changelog record

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • None
    • None
    • 3
    • 7501

      When a file layout is created or changed no changelog record is generated.
      We propose to add a CL_LAYOUT event.
      First use case seen are:

      • file created
      • layout allocated after file created with LOV_DELAY_CREATE
      • layout swap (1 event per file)

            jay Jinshan Xiong (Inactive)
            cealustre CEA
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: