LU-3087 mdd: Record layout changes.

1. Introduce a new CL_LAYOUT changelog record type.

2. Emit CL_LAYOUT records on layouts swap operations
and delayed LOVEA changes.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Change-Id: I5b94e9707b289e321e7d7f49a742ce3b002e2abb
Reviewed-on: http://review.whamcloud.com/5966
Reviewed-by: Fan Yong <fan.yong@intel.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>